|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-03-15 Benedikt Heintel
	- SETUP:
		* fixed bug #106: VHCS Omega frontend not working on setup

2007-03-15 Benedikt Heintel
	- CONFIGS:
		* Workaround for VHCS panel page not longer working after creation of a new domain
		* fixed bug #93: the value {STARTER_DIR} which is used by the php fcgi support isn't replaced
	- ENGINE:
		* some trivial changes
	- GUI:
		* some trivial changes

2007-03-13 Benedikt Heintel
	- CONFIGS:
		* Ubuntu: proftpd changed config files for v3.1

2007-03-12 Benedikt Heintel
	- GUI:
		* fixed: some design issues
		* fixed: bug in error pages
		* changed: behaviour of lostpassword messages
		* modified: layout of some functions

2007-03-09 Benedikt Heintel
	- CONFIGS:
		* proftpd: changed config files for v3.1
	- SETUP:
		* fixed bug #104 & #105: error on setting up proFTPd on Debian Etch

2007-03-09 Benedikt Heintel
	- LANGUAGES:
		* Finish: added missing strings

2007-03-06 Benedikt Heintel
	- CONFIGS:
		* RedHat: Added support for RedHat (seeking for maintainer)
		* Ubuntu: Added support for Ubuntu
		* updated postfix master file
		* updated Makefiles
		* added greylisting via postgrey for Debian and Ubuntu
	- DOCS:
		* RedHat: Added support for RedHat (seeking for maintainer)
		* changed some strings
		* Gentoo: Added INSTALL file
		* Ubuntu: Added support for Ubuntu
		* updated INSTALL files

2007-03-05 Benedikt Heintel
	- GUI:
		* changed: added secound "Add Domain Alias" button on top
	- LANGUAGES:
		* Czech: added missing strings
	- TOOLS:
		* AWStats update to 6.6 final

2007-03-03 Benedikt Heintel
	- CONFIGS:
		* fixed bug #99: fastcgi.conf (and proftpd.conf) are not copied on setup
