@@ -84,11 +84,12 @@ Make sure you are logged in as root.
 	deb-src http://dotdeb.pimpmylinux.org/          stable          all
 
 
-	(when you get to the courier screen select no to web directories)
-	(when you get to the postfix screen select internet site and then type root
-	for mail. If you set debian up correctly on install your domain should be
-	already on screen. Select no to force sync updates.)
-	(when you get to the proftpd screen, select standalone)
+	(when you get to the courier screen select 'no' to web directories)
+	(when you get to the postfix screen select 'internet site' and then type 'root'
+	for mail. If you've set debian up correctly on install your domain should be
+	already on screen. Select 'no' to force sync updates.)
+	(when you get to the proftpd screen, select 'standalone')
+	(when you get to the rootkithunter screen, select two time 'yes')
 
 4. Now there are two ways of install VHCS ω
 
