@@ -12,6 +12,14 @@ VHCS 2.4.8 ω Omega Changelog
 \_________________________________________________________________/
 
 2007-03-15 Benedikt Heintel
+	- DOCS:
+		* Debian: updated INSTALL
+		* Debian: added etch package rkhunter
+	- ENGINE:
+		* added feature #94: change of php.ini-files on update
+		* fixed warning
+	- GUI:
+		* updated: rootkit hunter
 	- SETUP:
 		* fixed bug #106: VHCS Omega frontend not working on setup
 
